--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hint_password">Password</string>
     <string name="str_login">Log in</string>
     <string name="str_create_account">Create Account</string>
+    <string name="str_has_forgotPass">have you forgotten your password?</string>
+    <string name="str_signup_with">Sign up with</string>
 </resources>
