Registration and login request

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,8 @@
 
     <string name="str_fb_id">1823860091226577</string>
 
+    <string name="str_verify_email">Please verify your email</string>
+
 
 
 
