--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,11 +19,10 @@
     <string name="str_save">Save</string>
     <string name="str_write_rush">Write  your Rush account</string>
     <string name="str_submit">Submit</string>
-    <string name ="str_fullname">Full name</string>
+    <string name="str_fullname">Full name</string>
     <string name="str_password">Password</string>
     <string name="str_email">Email</string>
     <string name="str_phone">Phone</string>
-
 
 
     <string name="error_empty_email">Email address cannot be empty.</string>
@@ -57,6 +56,15 @@
     <string name="str_verify_email">Please verify your email</string>
 
 
+    <string name="alert_dialog_title">Please Select</string>
+    <string name="positive_button_text">Select</string>
+    <string name="negative_button_text">Cancel</string>
+    <string name="title_activity_book_service">BookServiceActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 
 
 </resources>
