--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 <string name="hint_user">Usuario</string>
     <string name="hint_password">Contrasena</string>
+    <string name="hint_confirm_password">Nueva Contrasena</string>
 
     <string name="str_login">Iniciar Sesion</string>
     <string name="str_create_account">Crear cuenta</string>
@@ -19,4 +20,41 @@
     <string name="str_password">Contraseña</string>
     <string name="str_email">Email</string>
     <string name="str_phone">Teléfono</string>
+
+
+
+
+
+    <string name="error_empty_email">La dirección de correo electrónico no puede estar vacía.</string>
+    <string name="error_empty_name">Fullname no puede estar vacío.</string>
+    <string name="error_empty_password">La contraseña no puede estar vacía.</string>
+    <string name="error_empty_Mobile">El número de móvil no puede estar vacío.</string>
+    <string name="error_title_invalid_email">Email inválido</string>
+    <string name="error_title_invalid_password">Contraseña invalida</string>
+    <string name="error_title_invalid_Mobile">Numero de celular invalido</string>
+    <string name="error_title_invalid_profile">Imagen de perfil no válida</string>
+    <string name="error_title_invalid_card">Tarjeta no valida</string>
+    <string name="error_pass_not_matched">La contraseña no coincide.</string>
+    <string name="str_open_Camera">Cámara abierta</string>
+    <string name="str_open_Gallery">Abrir Galería</string>
+    <string name="str_profile_pic">Seleccionar foto de perfil</string>
+
+
+    <string name="error_invalid_card">Numero de tarjeta invalido</string>
+    <string name="str_empty_expiry">La fecha de vencimiento no debe estar vacía</string>
+    <string name="str_invalid_cvv">Cvv no es válido</string>
+    <string name="str_empty_city">La ciudad está en blanco</string>
+    <string name="str_empty_country">País en blanco</string>
+    <string name="str_empty_headline">HeadLine is blank</string>
+    <string name="str_fb_id">1823860091226577</string>
+    <string name="str_verify_email">Verifique su correo electrónico</string>
+    <string name="alert_dialog_title">Seleccione</string>
+    <string name="positive_button_text">Seleccionar</string>
+    <string name="negative_button_text">Cancelar</string>
+    <string name="title_activity_book_service">BookServiceActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="action_settings">Ajustes</string>
+
+    <string name="str_verify_text">Le enviaremos un correo electrónico a su cuenta.Por favor, active su cuenta.</string>
 </resources>
