--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Rush</string>
     <string name="hint_user">User</string>
     <string name="hint_password">Password</string>
-    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="hint_new_password">New Password</string>
+    <string name="hint_confirm_new_password">Confirm new Password</string>
 
     <string name="str_login">Log in</string>
     <string name="str_create_account">Create Account</string>
