--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,13 +70,23 @@
     <string name="str_menu_schedule">Scheduled</string>
     <string name="str_menu_fav">My Favourite</string>
     <string name="str_menu_logout">Sign Out</string>
-    <string name ="str_select_currency">Please Select currency</string>
+    <string name="str_select_currency">Please Select currency</string>
 
-    <string name ="progress_loading">Loading..</string>
+    <string name="progress_loading">Loading..</string>
     <string name="str_link_card">Please link a card to your account.</string>
 
     <string name="str_no_changes">No change selected</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="map_debug_key">AIzaSyC9mIzTclxIaJ58qXttq4SbWB7bBx1xxfk</string>
+
+    <string name="str_reservation">Reservation</string>
+    <string name="str_now">Now</string>
+
+    <string name="str_hint_start">Indicates starting point</string>
+
+    <string name="str_hint_end">Indicates ending point</string>
 
 
 </resources>
