Card List UI , confirm service UI

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -84,4 +84,8 @@
 
     <string name="str_hint_start">indica punto de partida</string>
     <string name="str_hint_end">indica punto de destino</string>
+
+    <string name="str_make_order">Realizar pedido</string>
+    <string name="str_value_estimate">Estimated value</string>
+    <string name="str_value_time">Estimated Time</string>
 </resources>
