--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string name="str_make_order">Make an order</string>
     <string name="str_value_estimate">Valor estimado</string>
     <string name="str_value_time">Hora prevista</string>
+    <string name="str_fav_message">Are you sure ,you want to mark this address to Favourite?</string>
 
 
 </resources>
