--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="str_value_estimate">Valor estimado</string>
     <string name="str_value_time">Hora prevista</string>
     <string name="str_fav_message">Are you sure ,you want to mark this address to Favourite?</string>
+    <string name="str_delete_Card">Are you sure ,you want to delete this card?</string>
     <string name="str_fav_remove">Are you sure ,you want to remove this address from Favourite?</string>
     <string name="str_marking_fav">Marking Favourite..</string>
 
@@ -102,6 +103,8 @@
     <string name="title_activity_place_autocomplete">PlaceAutocomplete</string>
     <string name="str_record">Records</string>
     <string name="str_scheduled">Scheduled</string>
+
+    <string name="str_another_des">Add another destination</string>
 
 
 </resources>
