--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,7 @@
     <string name="str_delete_Card">Are you sure ,you want to delete this card?</string>
     <string name="str_fav_remove">Are you sure ,you want to remove this address from Favourite?</string>
     <string name="str_marking_fav">Marking Favourite..</string>
+    <string name="str_default_Card">Are you sure ,you want to mark this card default?</string>
 
 
     <string name="progress_loading">Loading..</string>
