--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,10 @@
     <string name="login_as_user">Start as user</string>
     <string name="login_as_driver">Start as messenger</string>
     <string name="in_service">In Service</string>
-    <string name="out_service">Out of  Service</string>
+    <string name="out_service">Out of Service</string>
+    <string name="str_collect">Collect</string>
+    <string name="str_deliver">Deliver</string>
+    <string name="estimated_price">Estimated Price</string>
+
 
 </resources>
