--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -72,6 +72,7 @@
     <string name="str_menu_record">Grabar</string>
     <string name="str_menu_schedule">Programado</string>
     <string name="str_menu_fav">Mi favorito</string>
+    <string name="str_settings">Ajustes</string>
     <string name="str_menu_logout">Desconectar</string>
 
     <string name ="str_select_currency">Por favor Seleccione el tipo de moneda</string>
@@ -109,6 +110,9 @@
 
     <string name="str_estimate_cost">Costo estimado</string>
 
+    <string name="str_edit_profile">Editar perfil</string>
+    <string name="str_add_card">Agregar tarjeta</string>
+    <string name="str_frequent_address">Dirección de uso frecuente</string>
     /****************************************************************Drivers String.************\
     <string name="login_as_user">Iniciar como usuario</string>
     <string name="login_as_driver">Iniciar como Mensajaro</string>
