--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="str_menu_record">Record</string>
     <string name="str_menu_schedule">Scheduled</string>
     <string name="str_menu_fav">My Favourite</string>
+    <string name="str_settings">Settings</string>
     <string name="str_menu_logout">Sign Out</string>
     <string name="str_select_currency">Please Select currency</string>
 
@@ -121,6 +122,9 @@
     <string name="str_permission_denied">Permission denied.</string>
 
     <string name="str_internet_error"></string>
+    <string name="str_edit_profile">Edit Profile</string>
+    <string name="str_add_card">Add Card</string>
+    <string name="str_frequent_address">Frequently used Address</string>
 
 
     /****************************************************************Drivers String.************\
