UI and changes ,Accept reject UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="estimated_price">Estimated Price</string>
     <string name="title_activity_upcoming">UpcomingActivity</string>
     <string name="geo_coding_key">AIzaSyBnCvbt86W9GGcNcOIzCPF2mkMauYRgA2o</string>
+    <string name="title_activity_accept_order">AcceptOrderActivity</string>
 
 
 </resources>
