--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="title_activity_upcoming">UpcomingActivity</string>
     <string name="geo_coding_key">AIzaSyBnCvbt86W9GGcNcOIzCPF2mkMauYRgA2o</string>
     <string name="title_activity_accept_order">AcceptOrderActivity</string>
+    <string name="title_activity_completed_records">CompletedRecords</string>
 
 
 </resources>
