notification work for driver,Upcoming UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,8 @@
     <string name="geo_coding_key">AIzaSyBnCvbt86W9GGcNcOIzCPF2mkMauYRgA2o</string>
     <string name="title_activity_accept_order">AcceptOrderActivity</string>
     <string name="title_activity_completed_records">CompletedRecords</string>
+    <string name="str_source">Source</string>
+    <string name="str_dest">Destination</string>
 
 
 </resources>
