--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -122,4 +122,7 @@
     <string name="str_collect">Recoger</string>
     <string name="str_deliver">Entregar</string>
     <string name="estimated_price">Precio estimado</string>
+
+    <string name="str_source">Recoger</string>
+    <string name="str_dest">Entregar</string>
 </resources>
