--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="str_edit_profile">Edit Profile</string>
     <string name="str_add_card">Add Card</string>
     <string name="str_frequent_address">Frequently used Address</string>
+    <string name="str_receipt">Receipt</string>
 
 
     /****************************************************************Drivers String.************\
