Handled driver notifications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="title_activity_accept_order">AcceptOrderActivity</string>
     <string name="title_activity_completed_records">CompletedRecords</string>
     <string name="str_source">Source</string>
+    <string name="str_finished">Finished</string>
     <string name="str_dest">Destination</string>
 
 
