--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -127,4 +127,6 @@
     <string name="str_finished">Terminado</string>
     <string name="str_source">Recoger</string>
     <string name="str_dest">Entregar</string>
+
+    <string name="str_notify_text">¿Ha recibido una solicitud?</string>
 </resources>
