Changes in upcoming fragment ,load more added in driver upcoming fragment

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -129,4 +129,5 @@
     <string name="str_dest">Entregar</string>
 
     <string name="str_notify_text">¿Ha recibido una solicitud?</string>
+    <string name="str_add_comment">agregar comentario</string>
 </resources>
