Finished upcoming screen ,after adding comments Update driver status (inservice and out of service UI changes)

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -130,4 +130,5 @@
 
     <string name="str_notify_text">¿Ha recibido una solicitud?</string>
     <string name="str_add_comment">agregar comentario</string>
+    <string name="str_try_again">Inténtalo de nuevo</string>
 </resources>
